04/gateway-api/httproute-headers.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: header-routing
spec:
  parentRefs:
  - name: eg

  rules:
  # Route 1: Jeśli header version=v2, kieruj do v2
  - matches:
    - headers:
      - name: version
        value: v2
      path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: passage-v2-webapp-svc
      port: 80

  # Route 2: Domyślnie (brak headera lub inna wartość) - v1
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: passage-webapp-svc
      port: 80
