04/gateway-api/httproute-simple.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: passage-route
spec:
  parentRefs:
  - name: eg
  rules:
  - backendRefs:
    - name: passage-webapp-svc
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /
